# budget-tracker

./: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitleaksignore  .markdownlint.json  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_SETUP_COMPLETE.md  COMPLIANCE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  LICENSE  POC.md  README.md  SECURITY.md  USER_MANUAL.md  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  nginx-dev.conf  nginx-staging.conf  nginx.conf  package-lock.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
Database/: BUG_REPORT_TEMPLATE.md  README.md  TEST_CASES.md
Database/ scripts/: data_cleaning.py  generate_synthetic.py
Database/Documentation/: CONTRIBUTING.md  POC.md  README.md  USER_MANUAL.md
Database/cleaned_data/: clean_audit.csv  clean_complaints.csv  clean_projects.csv
Database/raw_data/: audit.csv  complaints.csv  projects.csv
Frontend/: .env.example  .eslintrc.json  .prettierrc  README.md  index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: index.css
Frontend/src/components/: BudgetChart.jsx  Footer.jsx  Navbar.jsx  PrivateRoute.jsx  ProfileDropdown.jsx  ProjectCard.jsx  ProjectTable.jsx  Sidebar.jsx  StatsCard.jsx  StatusChart.jsx
Frontend/src/components/ui/: SidebarNav.jsx  Topbar.jsx
Frontend/src/config/: apiConfig.js
Frontend/src/context/: AuthContext.jsx  BudgetContext.jsx  NotificationContext.jsx
Frontend/src/data/: mockData.js
Frontend/src/layouts/: AuthLayout.jsx  MainLayout.jsx
Frontend/src/pages/: AdminDashboard.jsx  Analytics.jsx  ChatbotPage.jsx  Dashboard.jsx  LandingPage.jsx  MapViewPage.jsx  NotificationsPage.jsx  ProjectDetails.jsx  Projects.jsx  ReportPage.jsx  SettingsPage.jsx
Frontend/src/pages/auth/: ForgotPasswordPage.jsx  LoginPage.jsx  RegisterPage.jsx
Frontend/src/routes/: AppRoutes.jsx
Frontend/src/services/: analyticsService.js  api.js  chatService.js  dashboardService.js  projectsService.js  reportsService.js
Integration/: .env  .env.example  README.md  adk_config.py  api.py  auth_config.py  budget_tracker.db  database.py  google_adk_client.py  init_db.py  requirements.txt  schema.sql
Testing/: BUG_REPORTS.md  CHATBOT_TESTS.md  TEST_CASES.md  test_cleaning_run.py
scripts/: backup-db.sh  deploy.sh  pre-deploy-checks.sh  restore-db.sh
